wanyutang-dev-application/Deployment_apps_v1_wanyutang-dev_demo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"demo-app:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"demo-app\")].image","pause":""}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
  name: demo-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: demo-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: demo-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/wanyutang-dev/demo-app@sha256:5f5befdb5f676efc971dd51c8d5c5071a8abed77919634683ee2919f75088317
        imagePullPolicy: IfNotPresent
        name: demo-app
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
