wanyutang-dev-application/Service__v1_wanyutang-dev_demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
  name: demo-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 3000-tcp
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    deployment: demo-app
  sessionAffinity: None
  type: ClusterIP
