wanyutang-dev-application/Service__v1_wanyutang-dev_modelmesh-serving.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: model-serving-proxy-tls
    service.alpha.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1667937354
    service.beta.openshift.io/serving-cert-signed-by: openshift-service-serving-signer@1667937354
  labels:
    app.kubernetes.io/instance: modelmesh-controller
    app.kubernetes.io/managed-by: modelmesh-controller
    app.kubernetes.io/name: modelmesh-controller
    modelmesh-service: modelmesh-serving
  name: modelmesh-serving
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 8033
    protocol: TCP
    targetPort: grpc
  - name: http
    port: 8008
    protocol: TCP
    targetPort: http
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  - name: prometheus
    port: 2112
    protocol: TCP
    targetPort: prometheus
  selector:
    modelmesh-service: modelmesh-serving
  sessionAffinity: None
  type: ClusterIP
