wanyutang-dev-application/Route_route.openshift.io_v1_wanyutang-dev_demo-app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: demo-app
    app.kubernetes.io/component: demo-app
    app.kubernetes.io/instance: demo-app
  name: demo-app
spec:
  port:
    targetPort: 3000-tcp
  to:
    kind: Service
    name: demo-app
    weight: 100
  wildcardPolicy: None
