wanyutang-dev-application/NetworkPolicy_networking.k8s.io_v1_wanyutang-dev_allow-from-olm-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/owner":"wanyutang","toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-from-olm-namespaces","namespace":"wanyutang-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"openshift.io/scc":"anyuid"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}'
  labels:
    toolchain.dev.openshift.com/owner: wanyutang
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-from-olm-namespaces
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          openshift.io/scc: anyuid
  podSelector: {}
  policyTypes:
  - Ingress
