wanyutang-dev-application/NetworkPolicy_networking.k8s.io_v1_wanyutang-dev_allow-from-openshift-monitoring.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/owner":"wanyutang","toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-from-openshift-monitoring","namespace":"wanyutang-dev"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"network.openshift.io/policy-group":"monitoring"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}'
  labels:
    toolchain.dev.openshift.com/owner: wanyutang
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-from-openshift-monitoring
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
