wanyutang-dev-application/NetworkPolicy_networking.k8s.io_v1_wanyutang-dev_allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    toolchain.dev.openshift.com/last-applied-configuration: '{"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"labels":{"toolchain.dev.openshift.com/owner":"wanyutang","toolchain.dev.openshift.com/provider":"codeready-toolchain"},"name":"allow-same-namespace","namespace":"wanyutang-dev"},"spec":{"ingress":[{"from":[{"podSelector":{}}]}],"podSelector":{}}}'
  labels:
    toolchain.dev.openshift.com/owner: wanyutang
    toolchain.dev.openshift.com/provider: codeready-toolchain
  name: allow-same-namespace
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
